Add local legacy support libraries

--- a/demo/index-less.html
+++ b/demo/index-less.html
@@ -11,7 +11,7 @@
 
     <!-- IE9+ required for Less in browser -->
     <!--[if gte IE 9]>  <!-- -->
-    <script src="https://unpkg.com/less/dist/less.min.js"></script>
+    <script src="/js/less.min.js"></script>
     <![endif]-->
 </head>
 
