--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
     <![endif]-->
 
     <!--[if lte IE 8]>
-    <script src="https://unpkg.com/html5shiv/dist/html5shiv.min.js"></script>
+    <script src="/js/html5shiv.min.js"></script>
     <![endif]-->
 </head>
 
@@ -1497,8 +1497,8 @@
 
     <!-- JavaScript -->
     <!--[if lte IE 8]>
-    <script src="https://unpkg.com/nwmatcher"></script>
-    <script src="https://unpkg.com/selectivizr2"></script>
+    <script src="/js//nwmatcher.js"></script>
+    <script src="/js//selectivizr2.js"></script>
     <![endif]-->
     <script src="/js/main.js"></script>
 </body>
