--- a/demo/index.html
+++ b/demo/index.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="grids-less.css">
 
     <!--[if gte IE 9]>  <!-- -->
-    <link rel="stylesheet" href="grids-pcss.css">
-    <link rel="stylesheet" href="grids-scss.css">
-    <link rel="stylesheet" href="grids-styl.css">
+    <link rel="stylesheet" href="grids-postcss.css">
+    <link rel="stylesheet" href="grids-sass-import.css">
+    <link rel="stylesheet" href="grids-sass-use.css">
+    <link rel="stylesheet" href="grids-stylus.css">
     <![endif]-->
 
     <!--[if lte IE 8]>
-    <script src="/js/html5shiv.min.js"></script>
+    <script src="/js/vendor/html5shiv.min.js"></script>
     <![endif]-->
 </head>
 
@@ -33,7 +34,8 @@
             <li><a href="#compare">Compare</a></li>
             <li><a href="#less">Less</a></li>
             <li><a href="#postcss">PostCSS</a></li>
-            <li><a href="#sass">Sass</a></li>
+            <li><a href="#sass-import">Sass <code>@import</code></a></li>
+            <li><a href="#sass-use">Sass <code>@use</code></a></li>
             <li><a href="#stylus">Stylus</a></li>
         </ul>
     </nav>
@@ -767,7 +769,370 @@
             </div>
         </section>
 
-        <section class="sass">
+        <section class="sass-import">
+            <h2>Single ratio value</h2>
+            <div class="grid-nocalc-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Single ratio value without gaps</h2>
+            <div class="grid-nocalc-singleratio-nogap">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Single ratio value without margins</h2>
+            <div class="grid-nocalc-singleratio-nomargin">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Multiple ratio values</h2>
+            <div class="grid-nocalc-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fixed columns</h2>
+            <div class="grid-nocalc-fixed">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fixed column (first) + single ratio value</h2>
+            <div class="grid-nocalc-fixed-first-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fixed column (last) + single ratio value</h2>
+            <div class="grid-nocalc-fixed-last-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fixed column (first) + multiple ratio values</h2>
+            <div class="grid-nocalc-fixed-first-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fixed column (middle) + multiple ratio values</h2>
+            <div class="grid-nocalc-fixed-middle-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fixed column (last) + multiple ratio values</h2>
+            <div class="grid-nocalc-fixed-last-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fixed columns (first and last) + single ratio value</h2>
+            <div class="grid-nocalc-fixed-firstlast-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fluid column (first) + single ratio value</h2>
+            <div class="grid-nocalc-fluid-first-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fluid column (last) + single ratio value</h2>
+            <div class="grid-nocalc-fluid-last-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fluid column (first) + multiple ratio values</h2>
+            <div class="grid-nocalc-fluid-first-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fluid column (middle) + multiple ratio values</h2>
+            <div class="grid-nocalc-fluid-middle-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Fluid column (last) + multiple ratio values</h2>
+            <div class="grid-nocalc-fluid-last-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Column Order</h2>
+            <div class="grid-nocalc-order">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Direction (RTL)</h2>
+            <div class="grid-nocalc-rtl">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>Nested Grids</h2>
+            <div class="grid-nocalc-nested">
+                <div>
+                    <div class="grid-n">
+                        <div>1</div>
+                        <div>2</div>
+                        <div>3</div>
+                        <div>4</div>
+                        <div>5</div>
+                        <div>6</div>
+                    </div>
+                </div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Single ratio value</h2>
+            <div class="grid-calc-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Single ratio value without gaps</h2>
+            <div class="grid-calc-singleratio-nogap">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Single ratio value without margins</h2>
+            <div class="grid-calc-singleratio-nomargin">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Multiple ratio values</h2>
+            <div class="grid-calc-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fixed columns</h2>
+            <div class="grid-calc-fixed">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fixed column (first) + single ratio value</h2>
+            <div class="grid-calc-fixed-first-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fixed column (last) + single ratio value</h2>
+            <div class="grid-calc-fixed-last-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fixed column (first) + multiple ratio values</h2>
+            <div class="grid-calc-fixed-first-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fixed column (middle) + multiple ratio values</h2>
+            <div class="grid-calc-fixed-middle-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fixed column (last) + multiple ratio values</h2>
+            <div class="grid-calc-fixed-last-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fixed columns (first and last) + single ratio value</h2>
+            <div class="grid-calc-fixed-firstlast-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fluid column (first) + single ratio value</h2>
+            <div class="grid-calc-fluid-first-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fluid column (last) + single ratio value</h2>
+            <div class="grid-calc-fluid-last-singleratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fluid column (first) + multiple ratio values</h2>
+            <div class="grid-calc-fluid-first-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fluid column (middle) + multiple ratio values</h2>
+            <div class="grid-calc-fluid-middle-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Fluid column (last) + multiple ratio values</h2>
+            <div class="grid-calc-fluid-last-multiratio">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Column Order</h2>
+            <div class="grid-calc-order">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Direction (RTL)</h2>
+            <div class="grid-calc-rtl">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+            <h2>CALC: Nested Grids</h2>
+            <div class="grid-calc-nested">
+                <div>
+                    <div class="grid-n">
+                        <div>1</div>
+                        <div>2</div>
+                        <div>3</div>
+                        <div>4</div>
+                        <div>5</div>
+                        <div>6</div>
+                    </div>
+                </div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+                <div>5</div>
+                <div>6</div>
+            </div>
+        </section>
+
+        <section class="sass-use">
             <h2>Single ratio value</h2>
             <div class="grid-nocalc-singleratio">
                 <div>1</div>
@@ -1497,8 +1862,8 @@
 
     <!-- JavaScript -->
     <!--[if lte IE 8]>
-    <script src="/js//nwmatcher.js"></script>
-    <script src="/js//selectivizr2.js"></script>
+    <script src="/js/vendor/nwmatcher.js"></script>
+    <script src="/js/vendor/selectivizr2.js"></script>
     <![endif]-->
     <script src="/js/main.js"></script>
 </body>
